2007-11-15 Dmitry Dulepov  <dmitry@typo3.org>

	* Changed setup to enable other extensions to add prefixes
	* Added hook to disable comments for individual items
	* Changed extension's category from "Frontend" to "Frontend plugin"

2007-11-07 Dmitry Dulepov  <dmitry@typo3.org>

	* Made a workaround for pre-4.2 bug where TYPO3 does not correctly handle flexform sheet references (see http://bugs.typo3.org/view.php?id=6581)
	* Removed required attribute for "Close commnting after:" in Advanced tab
	* Use current page if no storage page set
	* Changed prefix in forms and styles from nccomments to comments

2007-10-24 Dmitry Dulepov  <dmitry@typo3.org>

	* Added commenting closing
	* Added many new options in flexform

2007-10-23 Dmitry Dulepov  <dmitry@typo3.org>

	* Changed extkey from nc_comments to comments

2007-10-13 Dmitry Dulepov  <dmitry@typo3.org>

	* Added default captcha support and selection for captcha extension to use
	* Added notification feature
	* Disabled autocomplete for captcha field

2007-10-12 Dmitry Dulepov  <dmitry@typo3.org>

	* Moved commenting functionality to separate extension

2007-10-04 Dmitry Dulepov  <dmitry@typo3.org>

	* Added spam and double post checks
	* Added hook to remove comments if associated record is removed

2007-10-03 Dmitry Dulepov  <dmitry@typo3.org>

	* First draft implementation of commenting system

2007-09-30 Dmitry Dulepov  <dmitry@typo3.org>

	* Added tables for comments
	* Fix: $GLOBALS['LANG'] is not defined when no BE user

2007-09-30 Dmitry Dulepov  <dmitry@typo3.org>

	* Implemented relation between news and products