@@ -3,6 +3,7 @@
 	* Changed setup to enable other extensions to add prefixes
 	* Added hook to disable comments for individual items
 	* Changed extension's category from "Frontend" to "Frontend plugin"
+	* Adjusted page cache expiration if commnting is going to be disabled in future
 
 2007-11-07 Dmitry Dulepov  <dmitry@typo3.org>
 
